manifests/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels: 
    app: nginx
    svc: test-nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
