manifests/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: ingress-lb-1465351928.us-east-2.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              number: 8080
        path: /
        pathType: Exact
